--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "postinstall": "yarn --cwd ./client && yarn --cwd ./server && yarn --cwd ./rtmpserver",
     "frontend": "yarn  --cwd ./client start",
-    "backend": "yarn  --cwd ./server start"
+    "backend": "yarn  --cwd ./server start",
+    "media-server": "yarn  --cwd ./rtmpserver start"
   },
   "repository": {
     "type": "git",
